# mcp-project

./: .gitignore  README.md
mcp-client/: frontend.py  mcp-config.json  pyproject.toml
mcp-server/: README.md  books_cache.txt  main.py  pyproject.toml  server.py
