[project]
name = "mcp-client"
model = "deepseek-r1:8b"
host = "0.0.0.0"
port = "8000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ollama-mcp-bridge>=0.7.0",
    "streamlit>=1.50.0",
    "toml>=0.10.2",
]
